# new-workout-ai

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/perf/: 2026-05-23-baseline.md  2026-05-23-coreml-experiment.md
notebooks/: 01_capture_2d_3d.ipynb  squat_2d_3d_demo.ipynb  squat_single_fream_endtend.ipynb
notebooks/compression_pipeline/: 01_teacher_softlabels.ipynb  02_train_student.ipynb  03_eval_student.ipynb  04_quantize_coreml.ipynb  05_frontier.ipynb
notebooks/neck_stretch_test_pipeline/: neck_stretch_single_frame_endtoend.ipynb  neck_stretch_video_to_3d.ipynb
notebooks/squat_test_pipeline/: squat_single_fream_endtend.ipynb
research/compression/: README.md  __init__.py  coco_dataset.py  config.py  export_softlabels.py  losses.py  simcc.py  softlabel_store.py  teacher.py  train.py  transforms.py
scripts/: convert_neck_stretches.py  convert_shoulder_stretches.py  download_models.py  profile_pipeline.py  test_sound.py
src/: app.py  calibration.py  capture.py  pose2d.py  pose3d.py  render.py  routine.py  screens.py  selector.py  test_2D_3D.py
src/analysis/: angles.py  angles_3d.py  attention.py  camera_view.py  phases.py  rules_hold.py  rules_squat.py  types.py
src/camera/: select.py  (+3 more)
tests/: README.md  test_angles.py  test_angles_3d.py  test_attention.py  test_capture.py  test_exercise_pipeline_smoke.py  test_exercises_registry.py  test_hold_fsm.py  test_llm_smoke.py  test_neck_stretch.py  test_phases.py  test_pose2d_smoke.py  test_pose3d_smoke.py  test_render.py  test_rules_hold.py  test_rules_squat.py  test_types.py  test_worker.py
(+73 files in other folders)
