[project]
name = "new-workout-ai"
version = "0.1.0"
description = "Real-time squat form coach with Thai feedback"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0",
    "numpy>=1.26",
    "rtmlib>=0.0.13",
    "onnxruntime>=1.20.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "mlx>=0.21.0",
    "mlx-vlm>=0.5.0",
    "huggingface-hub>=0.26.0",
    "pillow>=10.0.0",
    "tqdm>=4.66.0",
    "easydict>=1.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/analysis", "src/feedback"]
sources = ["src"]
